fix(form): lighten the color of placeholder text in fields
Distinguishing between empty fields with a placeholder and completed fields was difficult because
the placeholder text color was too close to the color of field content.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,10 @@
     @apply font-display;
   }
 
+  input::placeholder, textarea::placeholder {
+    color: theme(colors.base-content / 40%)
+  }
+
   /* [lang="jp"] {
     @apply font-sans-jp;
   }
